--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,6 @@ ul {
 }
 
 li {
-  cursor: pointer;
   list-style-type: none;
   height: 50px;
   width: 600px;
@@ -63,7 +62,7 @@ li.strike {
 
 .right {
   position: absolute;
-  right: 100px;
+  right: 225px;
 }
 
 .delete {
@@ -110,6 +109,7 @@ button {
   cursor: pointer;
 }
 
-.noPointer {
-  cursor: default;
+.load {
+  position: absolute;
+  right: 100px;
 }
